--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -40,10 +40,8 @@
 <script src="https://unpkg.com/idiomorph/dist/idiomorph-ext.min.js"></script>
 <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
-        defer></script>
-<script type="text/javascript"
-        defer>
+<script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+<script type="text/javascript" defer>
     document.addEventListener('alpine:init', () => {
         Alpine.directive('confirm', (el, {expression}, {cleanup}) => {
             function click(event) {
