--- a/main/templates/elements/Level3AElement.html
+++ b/main/templates/elements/Level3AElement.html
@@ -7,7 +7,7 @@
 
 <form hx-post="{% url "level3a_element" %}">
     <div>
-        <button name="action_page" value="page">Refresh Page</button>
+        <button name="action" value="page">Refresh Page</button>
     </div>
     <div>
         <button name="action" value="2">Refresh 2</button>
