--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -34,7 +34,7 @@
 <body hx-ext="merge"
       class="container-fluid m-0 p-0"
       style="height: 100vh">
-<div id="body">
+<div id="body" class="h-100">
     {% block body %}{% endblock %}
 </div>
 
