--- a/demo_address_book/templates/demo_address_book_cbv/address_book_page.html
+++ b/demo_address_book/templates/demo_address_book_cbv/address_book_page.html
@@ -4,15 +4,14 @@
     <div class="d-flex flex-column h-100">
 
         <div class="bg-success p-3 text-white">
-            <h3>Address Book</h3>
+            <h3>Address3 Book</h3>
         </div>
 
         <div class="flex-grow-1 h-100 overflow-hidden">
 
             <div class="d-flex h-100">
 
-                <div class="h-100 overflow-y-scroll border-end"
-                     style="width: 25vw; min-width: 20rem; max-width: 500px;">
+                <div class="h-100 border-end overflow-y-scroll" style="width: 25vw; min-width: 20rem; max-width: 500px;">
                     {{ list_element }}
                 </div>
 
