--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -79,29 +79,6 @@
             };
         });
     });
-    document.body.addEventListener('htmx:configRequest', function (evt) {
-        {#if (evt.detail.verb.toLowerCase() === "get") {#}
-        {#    return;#}
-        {# } #}
-        let els = document.querySelectorAll("[__hyperpony_client_state__]");
-        els.forEach(function (el) {
-            let id = el.getAttribute("__hyperpony_client_state__");
-            let data = Alpine.$data(el);
-            let client_state = data["client_state"];
-            let client_to_server_excludes = data["client_to_server_excludes"];
-
-            let filtered_client_state = {};
-            Object.keys(client_state).forEach(function (key) {
-                if (!client_to_server_excludes.includes(key)) {
-                    filtered_client_state[key] = client_state[key];
-                }
-            });
-
-            evt.detail.parameters["__hyperpony_cs__" + id] = filtered_client_state;
-        });
-    });
-
-
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -117,6 +94,7 @@
 </script>
 
 {% hyperpony_script %}
+{% hyperpony_client_state %}
 {% hyperpony_script_swap_merge %}
 
 </body>
