--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -38,9 +38,7 @@
     {% block body %}{% endblock %}
 </div>
 
-<script src="https://unpkg.com/htmx.org@1.9.6"
-        integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni"
-        crossorigin="anonymous"></script>
+<script src="https://unpkg.com/htmx.org@2.0.1"></script>
 <script src="https://unpkg.com/idiomorph/dist/idiomorph-ext.min.js"></script>
 <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
 
