- new version 0.61.2 - client_to_server_excludes -> client_to_server_includes

--- a/main/templates/playground/client_state/client_state_element.html
+++ b/main/templates/playground/client_state/client_state_element.html
@@ -1,18 +1,33 @@
-<h1>ClientState</h1>
-<div x-text="client_state.foo"></div>
-<div x-text="client_state.bar"></div>
-<div x-text="client_state.baz"></div>
-<hr>
+<script type="text/javascript">
+    function clientStateElementData() {
+        return {
+            test() {
+                return "___" + (this.client_state.foo + 10000) + "___";
+            }
+        }
+    }
+</script>
 
-<div>
-    <button @click="client_state.foo = client_state.foo + 1">inc foo</button>
+<div x-data="clientStateElementData()">
+    <h1>ClientState</h1>
+
+    <div x-text="test()"></div>
+
+    <div x-text="client_state.foo"></div>
+    <div x-text="client_state.bar"></div>
+    <div x-text="client_state.baz"></div>
+    <hr>
+
+    <div>
+        <button @click="client_state.foo = client_state.foo + 1">inc foo</button>
+    </div>
+
+    <div>
+        <button hx-get="{{ view.url }}">get</button>
+        <button hx-post="{{ view.url }}?met=post">post</button>
+        <button hx-put="{{ view.url }}">put</button>
+        <button hx-patch="{{ view.url }}">patch</button>
+        <button hx-delete="{{ view.url }}">delete</button>
+    </div>
+
 </div>
-
-<div>
-    <button hx-get="{{ view.url }}">get</button>
-    <button hx-post="{{ view.url }}?met=post">post</button>
-    <button hx-put="{{ view.url }}">put</button>
-    <button hx-patch="{{ view.url }}">patch</button>
-    <button hx-delete="{{ view.url }}">delete</button>
-</div>
-
