--- a/main/templates/playground/elements/Level3AElement.html
+++ b/main/templates/playground/elements/Level3AElement.html
@@ -5,7 +5,7 @@
 <br>
 {{ source }}
 
-<form hx-post="{{ view.url }}">
+<form hx-post="{{ view.path }}">
     <div>
         <button name="action" value="page">Refresh Page</button>
     </div>
