--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:,">
 
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}{{ title }}{% endblock %}</title>
 
     <link href="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/css/tom-select.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -22,10 +22,6 @@
         [x-cloak] {
             display: none !important;
         }
-
-        input.invalid {
-            border: 1px solid red;
-        }
     </style>
 
     {% block head %}{% endblock %}
@@ -35,7 +31,7 @@
       class="container-fluid m-0 p-0"
       style="height: 100vh">
 <div id="body" class="h-100">
-    {% block body %}{% endblock %}
+    {% block body %}{{ body }}{% endblock %}
 </div>
 
 <script src="https://unpkg.com/htmx.org@2.0.2"></script>
@@ -67,24 +63,9 @@
         });
 
     });
-
-    document.addEventListener('alpine:init', () => {
-        Alpine.data('elementState', function (state_script_id) {
-            var state = JSON.parse(document.getElementById(state_script_id).innerText);
-            {#return state;#}
-            return {
-                //state_json(element_id) {
-                //    return JSON.stringify({element_id, state: this.client_state});
-                //},
-                client_state: state,
-
-            };
-        });
-    });
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
 <script src="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/js/tom-select.complete.min.js"></script>
 
 <script defer type="text/javascript">
@@ -96,7 +77,6 @@
 </script>
 
 {% hyperpony_script %}
-{% hyperpony_client_state %}
 {% hyperpony_script_swap_merge %}
 
 </body>
